snapshots/test_directives__finish_without_internal.snap
---
source: tests/test_directives.rs
info:
  program: arbor
  args:
    - finish
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Finishing worktree
Note: Use 'arbor-finish' (with shell integration) for automatic cd

----- stderr -----
